update: fix dark mode colors

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -33,7 +33,7 @@
   --black: rgb(187, 187, 187);
   --gray: rgb(21, 21, 21);
   --primary: #059669;
-  --secondary: rgb(27 38 42);
+  --secondary: #1b262a;
   --hover-color: #323232;
 
   --bar-color: rgba(255, 255, 255, 0.1);
